--- a/.github/workflows/render_data_docs.yml
+++ b/.github/workflows/render_data_docs.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - gh-workflow
+# Allows you to run this workflow manually from the Actions tab
+workflow_dispatch:
 
 jobs:
   render:
