--- a/.github/workflows/render_data_docs.yml
+++ b/.github/workflows/render_data_docs.yml
@@ -36,9 +36,9 @@ jobs:
             ${{ runner.os }}-renv-
 
       - name: Restore packages
-          run: |
+        run: |
             if (!requireNamespace("renv", quietly = TRUE)) install.packages("renv")
             renv::restore()
-          shell: Rscript {0}
+        shell: Rscript {0}
 
-          run: Rscript scripts/generate_docs.R
+      - run: Rscript scripts/generate_docs.R
