checkout action update

--- a/.github/workflows/render_data_docs.yml
+++ b/.github/workflows/render_data_docs.yml
@@ -14,7 +14,7 @@ jobs:
       RENV_PATHS_ROOT: ~/.local/share/renv
 
     steps:
-      - uses: actions/checkout@gh-workflow
+      - uses: actions/checkout@v2
 
       - name: Setup R
         uses: r-lib/actions/setup-r@v1
