--- a/.github/workflows/render_data_docs.yml
+++ b/.github/workflows/render_data_docs.yml
@@ -41,3 +41,11 @@ jobs:
         shell: Rscript {0}
 
       - run: Rscript scripts/generate_docs.R
+
+      - name: Commit results
+        run: |
+          RMD_PATH= ~./_docs/data
+          git config --local user.email "actions@github.com"
+          git config --local user.name "GitHub Actions"
+          git commit ${RMD_PATH[*]/.md} -m 'Re-build Rmarkdown files' || echo "No changes to commit"
+          git push origin || echo "No changes to commit"
