--- a/.github/workflows/render_data_docs.yml
+++ b/.github/workflows/render_data_docs.yml
@@ -44,8 +44,8 @@ jobs:
 
       - name: Commit results
         run: |
-          RMD_PATH= ~./_docs/data
+          RMD_PATH= /_docs/data
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
-          git commit ${RMD_PATH[*]/.md} -m 'Re-build Rmarkdown files' || echo "No changes to commit"
+          git commit ${RMD_PATH[*]/.md} -m 'Re-build markdown files' || echo "No changes to commit"
           git push origin || echo "No changes to commit"
