--- a/.github/workflows/render_data_docs.yml
+++ b/.github/workflows/render_data_docs.yml
@@ -23,7 +23,6 @@ jobs:
         uses: r-lib/actions/setup-r@v1
         with:
           r-version: 'release'
-          target_branch: 'gh-workflow'         # Default is gh-pages for github provider
       - uses: r-lib/actions/setup-pandoc@v1
 
       - name: Cache packages
@@ -44,7 +43,7 @@ jobs:
 
       - name: Commit results
         run: |
-          RMD_PATH= /_docs/data
+          RMD_PATH= _docs/data
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
           git commit ${RMD_PATH[*]/.md} -m 'Re-build markdown files' || echo "No changes to commit"
