--- a/.github/workflows/render_data_docs.yml
+++ b/.github/workflows/render_data_docs.yml
@@ -43,8 +43,8 @@ jobs:
 
       - name: Commit results
         run: |
-          RMD_PATH= _docs/data
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
-          git commit ${RMD_PATH[*]/.md} -m 'Re-build markdown files' || echo "No changes to commit"
+          git add _docs/data
+          git commit -m 'Re-build markdown files' || echo "No changes to commit"
           git push origin || echo "No changes to commit"
